--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,11 @@
 name = "adxl372"
 version = "0.1.0"
 edition = "2024"
+repository = "https://github.com/LarryMerino/adxl372"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
+embedded-hal = "1.0.0"
+
+[dev-dependencies]
+embedded-hal-mock = "0.11.1"
