--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 embedded-hal = "1.0.0"
+modular-bitfield = { version = "0.13.0" }
 
 [dev-dependencies]
 embedded-hal-mock = "0.11.1"
