--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,14 @@ edition = "2024"
 repository = "https://github.com/LarryMerino/adxl372"
 license = "MIT OR Apache-2.0"
 
+[features]
+default = []
+defmt = ["dep:defmt"]
+
 [dependencies]
 embedded-hal = "1.0.0"
 modular-bitfield = { version = "0.13.1" }
+defmt = { version = "1.0.1", optional = true }
 
 [dev-dependencies]
 embedded-hal-mock = "0.11.1"
