--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,4 @@ modular-bitfield = { version = "0.13.1" }
 defmt = { version = "1.0.1", optional = true }
 
 [dev-dependencies]
-embedded-hal-mock = "0.11.1"
+embedded-hal-mock = { version = "0.11.1", features = ["eh1"]}
