--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
 [package]
 name = "adxl372"
+description = "`#![no_std]` driver for the Analog Devices ADXL372 high-g 3-axis MEMS accelerometer."
+categories = ["no-std", "embedded", "hardware-support"]
+keywords = ["embedded-hal", "analog-devices", "accelerometer"]
 version = "0.1.0"
 edition = "2024"
 repository = "https://github.com/LarryMerino/adxl372"
