--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 edition = "2024"
 repository = "https://github.com/LarryMerino/adxl372"
 license = "MIT OR Apache-2.0"
+readme = "README.md"
 
 [features]
 default = []
